Fix the wrong color of some icons in the pix toolbar

--- a/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets.css
+++ b/usr/share/themes/Mint-X/gtk-3.0/gtk-widgets.css
@@ -181,7 +181,8 @@ GtkComboBox .button {
     color: @theme_fg_color;
 }
 
-.primary-toolbar .button.image-button {
+.primary-toolbar .button.image-button,
+.primary-toolbar .button GtkImage {
     color: #505050;
     icon-shadow: 0 1px alpha(white, 0.9);
 }
